# RelGravPy

./: .gitignore  README.md  pyproject.toml  relgavpy.yaml  setup.py
relgravpy/: grav_analysis.py  grav_processing.py  raster_tools.py  topo_effect.py  utils.py
