[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relgravpy"
version = "0.1.0"
description = "Relative gravimetry processing for geophysical applications"
authors = [
    { name = "Luigi Sante Zampa" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib"
]
